@@ -22,6 +22,10 @@ v0.39.5		24-Dec-2003
 		Poll, remove poll and request failed to points which had no
 		point directory in the outbound, now the directory is created.
 
+	mbfido:
+		With scannews after a GROUP command when authorisation was
+		asked we did not perform a login.
+
 	mbsetup:
 		Added setting in menu 1.14 to allow zero bytes lockfiles
 		created by another OS.
